--- a/cubicle/res/background.html
+++ b/cubicle/res/background.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="./main.js" type="module"></script>
+    <script src="./background.js" type="module"></script>
   </head>
   <body></body>
 </html>
