Changed to read template from file and separated welcome page

--- a/cubicle/res/popup.html
+++ b/cubicle/res/popup.html
@@ -20,21 +20,13 @@
         <span aria-hidden="true" class="icon">&#xe872;</span>
       </button>
     </nav>
-    <main style="height: 18rem; overflow-y: scroll;">
-      <ul style="list-style: none; padding: 0;">
-        <li style="display: flex; align-items: center;">
-          <input class="input-suffix" type="text" maxlength="256" placeholder="new suffix ... ↵"
-              style="flex-grow: 2; margin: auto 0.5rem;"/>
-          <div id="option-btn" style="margin-inline-end: 0.5rem;">
-            <button aria-label="Link suffix" class="center btn">
-              <span aria-hidden="true" class="icon">&#xe157;</span>
-            </button>
-          </div>
-        </li>
-      </ul>
-      <div style="margin: auto 0.5rem;">
-        <h1>Welcome to Cubicle!</h1>
-        <p>You can create a new container by selecting above.</p>
+    <main style="display: flex; height: 18rem; overflow-y: scroll;">
+      <div style="display: flex; width: 100%; justify-content: center; flex-direction: column;">
+        <h1 class="center">Loading...</h1>
+        <div aria-hidden="true" class="icon" style="width: 5rem; height: 5rem;
+            font-size: 5rem;">
+          &#xe558;
+        </div>
       </div>
     </main>
   </body>
