--- a/cubicle/res/popup.html
+++ b/cubicle/res/popup.html
@@ -8,15 +8,15 @@
   </head>
   <body style="width: 15rem;">
     <nav class="center" style="margin: auto 0.5rem;">
-      <button aria-label="Select icon" class="center btn">
+      <button id="btn-icon" aria-label="Select icon" class="center btn">
         <span aria-hidden="true" class="icon">&#xe9ef;</span>
       </button>
       <select id="select-container" style="flex-grow: 2; margin: auto 0.5rem;">
         <option value="none">No Container</option>
         <option value="new">+ Create New</option>
       </select>
-      <button aria-label="Delete" class="center btn"
-          style="color: white; background-color: firebrick;">
+      <button id="btn-delete" aria-label="Delete" class="center btn"
+          style="visibility: hidden; color: white; background-color: firebrick;">
         <span aria-hidden="true" class="icon">&#xe872;</span>
       </button>
     </nav>
