Added options page and fixed version storage

--- a/cubicle/res/popup.html
+++ b/cubicle/res/popup.html
@@ -29,5 +29,11 @@
         </div>
       </div>
     </main>
+    <hr/>
+    <footer style="margin: auto 0.5rem;">
+      <button id="btn-options" artia-label="Options" class="center btn">
+        <span aria-hidden="true" class="icon">&#xe8b8;</span>
+      </button>
+    </footer>
   </body>
 </html>
