Added icon display, changed to release mode, and changed for new clippy lint

--- a/cubicle/res/popup.html
+++ b/cubicle/res/popup.html
@@ -9,7 +9,7 @@
   <body style="width: 15rem;">
     <nav class="center" style="margin: auto 0.5rem;">
       <button id="btn-icon" aria-label="Select icon" class="center btn">
-        <span aria-hidden="true" class="icon">&#xe9ef;</span>
+        <img id="img-icon" class="icon" style="filter: invert(100%);"/>
       </button>
       <select id="select-container" style="flex-grow: 2; margin: auto 0.5rem;">
         <option value="none">No Container</option>
