Added name restriction, logging, and eager container erasure

--- a/cubicle/res/popup.html
+++ b/cubicle/res/popup.html
@@ -31,10 +31,11 @@
       </div>
     </main>
     <hr/>
-    <footer style="margin: auto 0.5rem;">
+    <footer style="display: flex; justify-content: space-between; margin: auto 0.5rem;">
       <button id="btn-options" artia-label="Options" class="center btn">
         <span aria-hidden="true" class="icon">&#xe8b8;</span>
       </button>
+      <span id="lbl-status" style="font-size: 0.8rem;"></span>
     </footer>
   </body>
 </html>
