Added recording container

--- a/cubicle/res/popup.html
+++ b/cubicle/res/popup.html
@@ -21,7 +21,8 @@
         <span aria-hidden="true" class="icon">&#xe872;</span>
       </button>
     </nav>
-    <main style="display: flex; height: 18rem; overflow-y: scroll; word-wrap: anywhere;">
+    <main style="display: flex; height: 18rem; overflow-y: scroll; word-wrap: anywhere;
+        flex-direction: column;">
       <div style="display: flex; width: 100%; justify-content: center; flex-direction: column;">
         <h1 class="center">Loading...</h1>
         <div aria-hidden="true" class="icon" style="width: 5rem; height: 5rem;
